Dang.. my brain hurt

--- a/views/Dino.pug
+++ b/views/Dino.pug
@@ -4,7 +4,7 @@ block content
   h1= title
 
   -
-    let results = [{name: "T-Rex", color: "Black", danger_rating: 10}, {name: "Homie-adon", color: "Aqua", danger_rating: 3}, {name: "Tri-horn", color: "Red", danger_rating: 6}]
+    let items = results
   
   div(class="container-fluid")
     div(class="row")
