--- a/views/index.pug
+++ b/views/index.pug
@@ -1,20 +1,12 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}. Please enjoy your stay.
-  button(type="button", class="btn btn-secondary", onClick="update()")
-    b Press Me
-
-  div(id="target") Display
-  br
-  br
-  a(href="./dino") Search Result 
-
-  script. 
-    let client_count = 0
-    function update()
-    {
-      client_count += 1
-      document.getElementById("target").innerHTML = `${client_count}`
-    }
+extends layout 
+ 
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/dinos") Take me to Dinos 
+    br 
+    a(href="/logout") Logout 
